--- a/demo/index.html
+++ b/demo/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="js.js"></script>
+  
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
+  <div id="greets">hi</div>
   this is a test
+  <div id="q">
+    check2
+  </div>
+  <script src="js.js"></script>
 </body>
 </html>
